Changes in version 5.1.1 (2024-12-14)

New features or changed behaviour of old functions
    o  derivedDsurface() for relativeD models
    
Bugs fixed
    o  addCovariates() generated spurious sf warning "attribute variables are 
       assumed to be spatially constant throughout all geometries "
    
Other
    o  tweaked OVpossum Rd example to avoid 'sp'
    o  split.xxxx() functions check for NA values in split factor
    o  externalqx undocumented details argument
    
Changes in version 5.1.0 (2024-11-04)

New features or changed behaviour of old functions
    o  MCgof() acquires 'debug' argument
    o  makeNewData.secr acquires 'bytrap' argument
    o  fxTotal extended to mixture models
    o  split.capthist() acquires 'bysession' argument
    o  simulate.secr() acquires 'poponly' argument
    o  sim.popn() infers 'core' from bbox of 'poly' argument if missing

Bugs fixed
    o  MCgof() stalled in model with trap covariates (detectpar problem)
    o  MCgof() error when zero unobserved AC
    o  direct calling of fxi.secr() disabled prematurely in 5.0.0 
    o  simulate.secr() when D~1 generated AC in rectangular window instead of respecting mask 
    o  esaPlot() in 5.0.0 failed with multi-session model

Other
    o  predict.secr() speed up when se.fit = FALSE
    o  detectpar() speedup (calls predict.secr with se.fit = FALSE)
    o  suggest.buffer() rounds to 3 sig.fig. and more robust
    o  expose 'externalpdot' details option
    o  plot.capthist() warning when petal plot rad argument large
    o  plot.secrtest() allows user-specified xlab
    o  MCgof() dots argument passed to testfn

Changes in version 5.0.0 (2024-10-02)

New features or changed behaviour of old functions
    o  MCgof() goodness-of-fit after Choo et al. (2024) DOI: 10.1111/2041-210X.14386
    o  blackbearCH new dataset of J. Laufenberg, F. van Manen and J. Clark
    o  default criterion for AIC and modelAverage changed from AICc to AIC
    o  score.table reports dAIC rather than dAICc